<resources>
    <string name="app_name">ЕГЭ - Русский</string>
    <string name="title">@string/app_name</string>
    <string name="author">обновления и связь: <b>telegram</b></string>
    <string name="author_url">https://t.me/thecattests_projects</string>
    <string name="dictionary">словарь ударений: <b>ctege.info</b></string>
    <string name="dictionary_url">https://ctege.info/russkiy-yazyik-teoriya-ege/orfoepicheskiy-slovnik-minimum-ege-po-russkomu-yazyiku.html</string>
    <string name="back_again_to_exit">Нажмите ещё раз, чтобы выйти</string>
    <string name="ioexception">Ошибка чтения или записи в файлы. Свяжитесь с разработчиком</string>
    <string name="button_words_list">Список слов</string>
    <string name="button_update">Обновить</string>
    <string name="search_hint">Поиск</string>
    <string name="theme">Сменить тему</string>
    <string name="sync_request_error">Ошибка отправки запроса</string>
    <string name="button_sync">Обновить словарь</string>
    <string name="button_forget_mistakes">Сбросить статистику ошибок</string>
    <string name="button_forget_queue">Перемешать очередь</string>
    <string name="synced">Словарь синхронизирован</string>
    <string name="mistakes_forgotten">Статистика ошибок сброшена</string>
    <string name="queue_shuffled">Очередь перемешана</string>
    <string name="zoom_in">Увеличить текст</string>
    <string name="zoom_out">Уменьшить текст</string>
    <string name="update_app_url">https://t.me/thecattests_projects</string>
    <string name="update_available">Доступно обновление!</string>
    <string name="some_categories_unavailable">Обновите приложение, чтобы иметь доступ к самым новым функциям и видеть категории новых типов</string>
</resources>