<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/words"
        android:title="@string/button_words_list"
        android:icon="@drawable/ic_search_48"
        android:contentDescription="@string/button_words_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        android:icon="@drawable/ic_dark"
        android:contentDescription="@string/theme"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/refresh"
        android:title="@string/button_sync"
        android:icon="@drawable/ic_sync"
        android:contentDescription="@string/button_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shuffle_queue"
        android:title="@string/button_forget_queue"
        android:contentDescription="@string/button_forget_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/forget_mistakes"
        android:title="@string/button_forget_mistakes"
        android:contentDescription="@string/button_forget_mistakes"
        app:showAsAction="never" />

    <!--item
        android:id="@+id/forget"
        android:title="@string/button_forget"
        android:icon="@drawable/ic_forget_24"
        android:contentDescription="@string/button_forget"
        app:showAsAction="never" /-->

</menu>