<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title"
            app:menu="@menu/main"
            style="@style/Toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/categories_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout"
        app:tabMode="scrollable"
        app:tabGravity="center"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/update_app_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:checkable="false"
        android:clickable="false"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/categories_navigation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_available"
                style="?attr/textAppearanceHeadline6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/incorrect"
                android:text="@string/some_categories_unavailable"/>
            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginTop="8dp"
                android:text="@string/button_update"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/task_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout" />

    <TextView
        android:id="@+id/extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_placeholder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="italic"
        android:textColor="?attr/colorOnSecondary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="15dp">
        <ImageButton
            android:id="@+id/zoom_in"
            android:background="?attr/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/zoom_restore"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_zoom_in_40"
            android:contentDescription="@string/zoom_in" />
        <ImageButton
            android:id="@+id/zoom_restore"
            android:background="?attr/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/zoom_out"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_restore_40"
            android:contentDescription="@string/zoom_in" />
        <ImageButton
            android:id="@+id/zoom_out"
            android:background="?attr/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom_out_40"
            android:contentDescription="@string/zoom_out" />
    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dictionary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/author"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginBottom="3dp"/>
    <TextView
        android:id="@+id/dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/dictionary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>